# mandelbrot-cuda

./: .gitignore  Cargo.toml  README.md  build_cuda.bat  build_cuda.sh
res/: lib.cu
src/: main.rs
